--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "web-build": "react-app-rewired build && mkdir -p backend/web_build && cp -R build/* backend/web_build"
   },
   "dependencies": {
+    "@modules/login": "file:./modules/login/",
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/social-login": "file:./modules/social-login/",
     "@react-native-community/masked-view": "^0.1.10",
